@@ -23,7 +23,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-final class Revisions
+public final class Revisions
 {
 	private final int number;
 	private final Revision[] revisions;
