@@ -78,9 +78,9 @@ public class ReviseTest extends CopeAssert
 		jdbcUrl  = props.getDatabaseUrl();
 		jdbcUser = props.getDatabaseUser();
 		
-		assertTrue(model5.isRevisionEnabled());
-		assertEquals(5, model5.getRevisionNumber());
-		assertEqualsUnmodifiable(Arrays.asList(revisions5), model5.getRevisions());
+		assertNotNull(model5.getRevisions());
+		assertEquals(5, model5.getRevisions().getNumber());
+		assertEqualsUnmodifiable(Arrays.asList(revisions5), model5.getRevisions().getList());
 		
 		model5.connect(props);
 		model5.tearDownSchema();
@@ -104,9 +104,9 @@ public class ReviseTest extends CopeAssert
 		}
 		model5.disconnect();
 		
-		assertTrue(model7.isRevisionEnabled());
-		assertEquals(7, model7.getRevisionNumber());
-		assertEqualsUnmodifiable(list(revisions7Missing[0]), model7.getRevisions());
+		assertNotNull(model7.getRevisions());
+		assertEquals(7, model7.getRevisions().getNumber());
+		assertEqualsUnmodifiable(list(revisions7Missing[0]), model7.getRevisions().getList());
 
 		model7.connect(props);
 		assertSchema(model7.getVerifiedSchema(), true, false);
@@ -153,9 +153,9 @@ public class ReviseTest extends CopeAssert
 				new Revision(4, "nonsense", "nonsense statement causing a test failure if executed for revision 4"),
 			};
 		model7.setRevisions(revisions7);
-		assertTrue(model7.isRevisionEnabled());
-		assertEquals(7, model7.getRevisionNumber());
-		assertEqualsUnmodifiable(Arrays.asList(revisions7), model7.getRevisions());
+		assertNotNull(model7.getRevisions());
+		assertEquals(7, model7.getRevisions().getNumber());
+		assertEqualsUnmodifiable(Arrays.asList(revisions7), model7.getRevisions().getList());
 
 		final Date reviseBefore = new Date();
 		model7.reviseIfSupported();
@@ -186,9 +186,9 @@ public class ReviseTest extends CopeAssert
 				new Revision(8, "nonsense8", "nonsense statement causing a test failure"),
 			};
 		model7.setRevisions(revisions8);
-		assertTrue(model7.isRevisionEnabled());
-		assertEquals(8, model7.getRevisionNumber());
-		assertEqualsUnmodifiable(Arrays.asList(revisions8), model7.getRevisions());
+		assertNotNull(model7.getRevisions());
+		assertEquals(8, model7.getRevisions().getNumber());
+		assertEqualsUnmodifiable(Arrays.asList(revisions8), model7.getRevisions().getList());
 
 		try
 		{
