@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* replaced Model.isRevisionEnabled() and getRevisionNumber() by getRevisions()
+	this breaks backwards API compatibility, but is unlikely to affect normal projects
 * renamed dsmf driver to dialect
 	this breaks backwards API compatibility, but is unlikely to affect normal projects
 * moved info classes into separate package
